[package]
name = "drink-o-matic"
version = "0.0.1"
authors = ["umbreon222 <umbreon222@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
wiringpi = "0.2.4"